# OneCard

./: .gitignore  .gitmodules  CMakeLists.txt  Card.cpp  Card.h  CmakeLists.txt  Default.h  Game.cpp  Game.h  Menulib.h  OneCard.sln  OneCard.vcxproj  OneCard.vcxproj.filters  Player.cpp  Player.h  Playerh.h  README.md  main.cpp  소스.cpp  소스1.cpp
include/: Card.h  ConsoleInputBase.h  Default.h  Game.h  GlCard.h  GmInoutputbase.h  Menulib.h  Player.h  Score.h  glInoutputbase.h  plinoutputbase.h  textglinoutput.h  textgminoutput.h
src/: CMakeLists.txt  Card.cpp  Game.cpp  GlCard.cpp  Player.cpp  Score.cpp  main.cpp  textglinoutput.cpp  textgminoutput.cpp
tests/: CMakeLists.txt  GlCardtest.cpp
